# suiup

./: .gitignore  Cargo.toml  Changes.md  README.md  flake.nix  install.sh
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml  update-releases.yml
nix/: releases.json  update-standalone-releases.py
src/: commands.rs  handle_commands.rs  lib.rs  main.rs  mvr.rs  patchelf.rs  paths.rs  standalone.rs  types.rs  walrus.rs
src/commands/: cleanup.rs  doctor.rs  install.rs  list.rs  mod.rs  patch.rs  remove.rs  show.rs  switch.rs  update.rs  which.rs
src/commands/default/: get.rs  mod.rs  set.rs
src/commands/self_/: mod.rs  uninstall.rs  update.rs
src/component/: doctor.rs  install.rs  list.rs  mod.rs  remove.rs
src/handlers/: cleanup.rs  default.rs  download.rs  install.rs  mod.rs  release.rs  self_.rs  show.rs  switch.rs  update.rs  version.rs  which.rs
tests/: commands_test.rs  integration_test.rs  test_utils.rs
tests/common/: mod.rs
