[package]
name = "suiup"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5.40"
console = { version = "0.15.8", features = ["windows-console-colors"] }
dirs = "6.0.0"
flate2 = "1.0.31"
futures-util = "0.3.30"
indicatif = "0.17"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.125"
tar = "0.4.41"
tokio = { version = "1.43.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
whoami = "1.5.2"

[dev-dependencies]
assert_cmd = "2.0"
mockall = "0.13.1"
predicates = "3.1"
tempfile = "3.20"

[profile.test]
inherits = "release"

